# webstack

./: .gitignore  README.md  TODO.nb  deploy.nb  domains.nb  framework.nb  makefile  pyproject.toml  webstack.nb
api/: .gitignore  app.py  makefile  pyproject.toml  scratch.py
api/.build/: dev.json
api/.chalice/: config.gen.json  config.json
api/.chalice/deployed/: dev.json
api/chalicelib/: config.py  cookies.py  requests.py  responses.py  tokens.py
api/chalicelib/blueprints/: auth.py  dev.py
api/chalicelib/middleware/: __init__.py  sessions.py
api/chalicelib/orm/: base.py  io.py  objects.py  session.py  tokens.py  user.py  users.py
api/swagger/: api.yaml  objects.yaml  responses.yaml
config/: .gitignore  makefile  private.gen.hjson.ex  public.gen.hjson
config/objects/: item.yml
config/swagger/: api.yml  api.yml.backup
db/: makefile  pyproject.toml
db/updates/: 001.psql  002.local.json
ui/: .gitignore  .lock.json  makefile  package.gen.json  rollup.config.gen.js  s3_config.json  tsconfig.json
ui/public/: config.gen.json  global.css  index.html
ui/src/: main.js
ui/src/components/: app.svelte  navbar.svelte
ui/src/components/about/: about_route.svelte
ui/src/components/auth/: login.svelte  logout.svelte  redirect.svelte  register.svelte  route.svelte  tokens.svelte
ui/src/components/dev/: tests.svelte  tokens.svelte
ui/src/components/forms/: component_map.svelte  form_editor.svelte  form_element.svelte  form_generator.svelte  form_manager.svelte  forms_explorer.svelte  forms_route.svelte
ui/src/components/gallery/: gallery.svelte  gallery_route.svelte  item.svelte
ui/src/components/home/: home_route.svelte
ui/src/components/product/: product_gallery.svelte  (+1 more)
ui/src/utils/: auth.js  calls.js  general.js
(+14 files in other folders)
