[tool.poetry]
name = "webstack.api"
version = "0.1.0"
description = ""
authors = ["Sam Haaf <samhaaf@gmail.com>"]

[tool.poetry.dependencies]
python = "==3.8.5"
chalice = "==1.21.8"
gspread = "^3.6.0"
oauth2client = "^4.1.3"

[tool.poetry.scripts]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
